--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -26,42 +26,44 @@
         ]]>
     </change-notes>
     <vendor url="https://github.com/vermut/intellij-ansible" email="vermut@kid.lv">Pavel Veretennikov</vendor>
-    <idea-version since-build="141.713"/>
+    <idea-version since-build="141.713" />
     <depends>com.intellij.modules.lang</depends>
+    <depends>org.jetbrains.plugins.yaml</depends>
 
     <!-- IDEA extensions -->
     <extensions defaultExtensionNs="com.intellij">
-        <fileTypeFactory implementation="lv.kid.vermut.intellij.yaml.file.YamlFileTypeFactory"/>
-        <colorSettingsPage implementation="lv.kid.vermut.intellij.yaml.editor.NeonColorsPage"/>
+        <fileType name="Yaml file" implementationClass="lv.kid.vermut.intellij.yaml.file.YamlFileType"
+                  fieldName="INSTANCE" language="yamlEx" extensions="yml" />
+        <colorSettingsPage implementation="lv.kid.vermut.intellij.yaml.editor.NeonColorsPage" />
         <lang.syntaxHighlighterFactory key="yamlEx"
-                                       implementationClass="lv.kid.vermut.intellij.yaml.editor.NeonSyntaxHighlighterFactory"/>
-        <lang.commenter language="yamlEx" implementationClass="lv.kid.vermut.intellij.yaml.YamlCommenter"/>
+                                       implementationClass="lv.kid.vermut.intellij.yaml.editor.NeonSyntaxHighlighterFactory" />
+        <lang.commenter language="yamlEx" implementationClass="lv.kid.vermut.intellij.yaml.YamlCommenter" />
         <lang.psiStructureViewFactory language="yamlEx"
-                                      implementationClass="lv.kid.vermut.intellij.yaml.editor.NeonStructureViewFactory"/>
+                                      implementationClass="lv.kid.vermut.intellij.yaml.editor.NeonStructureViewFactory" />
 
         <!-- code settings (indent, tabs?) -->
-        <codeStyleSettingsProvider implementation="lv.kid.vermut.intellij.yaml.editor.NeonCodeStyleSettingsProvider"/>
+        <codeStyleSettingsProvider implementation="lv.kid.vermut.intellij.yaml.editor.NeonCodeStyleSettingsProvider" />
         <langCodeStyleSettingsProvider
-                implementation="lv.kid.vermut.intellij.yaml.editor.YamlLanguageCodeStyleSettingsProvider"/>
+            implementation="lv.kid.vermut.intellij.yaml.editor.YamlLanguageCodeStyleSettingsProvider" />
 
         <lang.parserDefinition language="yamlEx"
-                               implementationClass="lv.kid.vermut.intellij.yaml.parser.NeonParserDefinition"/>
+                               implementationClass="lv.kid.vermut.intellij.yaml.parser.NeonParserDefinition" />
         <lang.fileViewProviderFactory language="yamlEx"
-                                      implementationClass="lv.kid.vermut.intellij.yaml.file.YamlFileViewProviderFactory"/>
-        <lang.braceMatcher language="yamlEx" implementationClass="lv.kid.vermut.intellij.yaml.YamlBraceMatcher"/>
+                                      implementationClass="lv.kid.vermut.intellij.yaml.file.YamlFileViewProviderFactory" />
+        <lang.braceMatcher language="yamlEx" implementationClass="lv.kid.vermut.intellij.yaml.YamlBraceMatcher" />
         <lang.foldingBuilder language="yamlEx"
-                             implementationClass="lv.kid.vermut.intellij.yaml.editor.NeonFoldingBuilder"/>
+                             implementationClass="lv.kid.vermut.intellij.yaml.editor.NeonFoldingBuilder" />
         <completion.contributor language="yamlEx"
-                                implementationClass="lv.kid.vermut.intellij.yaml.completion.NeonCompletionContributor"/>
-        <breadcrumbsInfoProvider implementation="lv.kid.vermut.intellij.yaml.editor.NeonBreadcrumbsInfoProvider"/>
+                                implementationClass="lv.kid.vermut.intellij.yaml.completion.NeonCompletionContributor" />
+        <breadcrumbsInfoProvider implementation="lv.kid.vermut.intellij.yaml.editor.NeonBreadcrumbsInfoProvider" />
 
         <!--references, go-to-->
-        <gotoSymbolContributor implementation="lv.kid.vermut.intellij.yaml.reference.AnsiblePropertiesContributor"/>
-        <gotoClassContributor implementation="lv.kid.vermut.intellij.yaml.reference.AnsibleNamesContributor"/>
-        <psi.referenceContributor implementation="lv.kid.vermut.intellij.yaml.reference.AnsibleReferenceContributor"/>
+        <gotoSymbolContributor implementation="lv.kid.vermut.intellij.yaml.reference.AnsiblePropertiesContributor" />
+        <gotoClassContributor implementation="lv.kid.vermut.intellij.yaml.reference.AnsibleNamesContributor" />
+        <psi.referenceContributor implementation="lv.kid.vermut.intellij.yaml.reference.AnsibleReferenceContributor" />
         <!--<lang.findUsagesProvider language="yamlEx" implementationClass="AnsibleFindUsagesProvider"/>-->
         <documentationProvider
-                implementation="lv.kid.vermut.intellij.yaml.reference.AnsibleVariableValuesDocumentationProvider"/>
+            implementation="lv.kid.vermut.intellij.yaml.reference.AnsibleVariableValuesDocumentationProvider" />
 
     </extensions>
 </idea-plugin>
