--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -33,11 +33,11 @@
     <!-- IDEA extensions -->
     <extensions defaultExtensionNs="com.intellij">
         <fileType name="Yaml file" implementationClass="lv.kid.vermut.intellij.yaml.file.YamlFileType"
-                  fieldName="INSTANCE" language="yamlEx" extensions="yml" />
+                  fieldName="INSTANCE" language="yamlEx" extensions="yaml" />
         <colorSettingsPage implementation="lv.kid.vermut.intellij.yaml.editor.NeonColorsPage" />
-        <lang.syntaxHighlighterFactory key="yamlEx"
+        <lang.syntaxHighlighterFactory language="yamlEx"
                                        implementationClass="lv.kid.vermut.intellij.yaml.editor.NeonSyntaxHighlighterFactory" />
-        <lang.commenter language="yamlEx" implementationClass="lv.kid.vermut.intellij.yaml.YamlCommenter" />
+        <lang.commenter language="yamlEx" implementationClass="org.jetbrains.yaml.YAMLCommenter" />
         <lang.psiStructureViewFactory language="yamlEx"
                                       implementationClass="lv.kid.vermut.intellij.yaml.editor.NeonStructureViewFactory" />
 
@@ -50,7 +50,11 @@
                                implementationClass="lv.kid.vermut.intellij.yaml.parser.NeonParserDefinition" />
         <lang.fileViewProviderFactory language="yamlEx"
                                       implementationClass="lv.kid.vermut.intellij.yaml.file.YamlFileViewProviderFactory" />
-        <lang.braceMatcher language="yamlEx" implementationClass="lv.kid.vermut.intellij.yaml.YamlBraceMatcher" />
+
+        <!-- Auto close braces -->
+        <lang.braceMatcher language="yamlEx"
+                           implementationClass="lv.kid.vermut.intellij.yaml.extension.AnsiblePairedBraceMatcher" />
+
         <lang.foldingBuilder language="yamlEx"
                              implementationClass="lv.kid.vermut.intellij.yaml.editor.NeonFoldingBuilder" />
         <completion.contributor language="yamlEx"
