--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -42,9 +42,8 @@
                                       implementationClass="lv.kid.vermut.intellij.yaml.editor.NeonStructureViewFactory" />
 
         <!-- code settings (indent, tabs?) -->
-        <codeStyleSettingsProvider implementation="lv.kid.vermut.intellij.yaml.editor.NeonCodeStyleSettingsProvider" />
-        <langCodeStyleSettingsProvider
-            implementation="lv.kid.vermut.intellij.yaml.editor.YamlLanguageCodeStyleSettingsProvider" />
+        <codeStyleSettingsProvider implementation="org.jetbrains.yaml.YAMLCodeStyleSettingsProvider" />
+        <langCodeStyleSettingsProvider implementation="org.jetbrains.yaml.YAMLLanguageCodeStyleSettingsProvider" />
 
         <lang.parserDefinition language="yamlEx"
                                implementationClass="lv.kid.vermut.intellij.yaml.parser.NeonParserDefinition" />
