Use custom codestyle settings provider to provide plugin display name

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -42,7 +42,7 @@
                                       implementationClass="lv.kid.vermut.intellij.yaml.editor.NeonStructureViewFactory" />
 
         <!-- code settings (indent, tabs?) -->
-        <codeStyleSettingsProvider implementation="org.jetbrains.yaml.YAMLCodeStyleSettingsProvider" />
+        <codeStyleSettingsProvider implementation="lv.kid.vermut.intellij.yaml.extension.AnsibleCodeStyleSettingsProvider" />
         <langCodeStyleSettingsProvider implementation="org.jetbrains.yaml.YAMLLanguageCodeStyleSettingsProvider" />
 
         <lang.parserDefinition language="yamlEx"
